reportbug (4.5) UNRELEASED; urgency=low

  * reportbug/__init__.py
    - bump reportbug version
  * reportbug/debianbts.py
    - force to enter the package name and short description while reporting a
      wnpp bug; thanks to Sam Morris for the report and to Carl Chenet for the
      idea about how to fix it; Closes: #456344
  * bin/reportbug
    - offer a default value (text) for UI at configuration time; thanks to Carl
      Chenet for the report and patch; Closes: #529981
  * bin/reportbug, conf/reportbug.conf, debian/control, man/reportbug.*,
    po4a/po/*, reportbug/utils.py
    - removed support for 'af' mail user agent, since it's no more in Debian;
      thanks to Carl Chenet for the report and (partial) patch; Closes: #529987

 -- Sandro Tosi <morph@debian.org>  Sat, 30 May 2009 11:17:56 +0200

reportbug (4.4) unstable; urgency=low

  * reportbug/__init__.py
    - bump reportbug version
  * bin/reportbug, reportbug/utils.py
    - enforce mua check; thanks to Carl Chenet for the patch; Closes: #530499

 -- Sandro Tosi <morph@debian.org>  Mon, 25 May 2009 20:09:10 +0200

reportbug (4.3) unstable; urgency=low

  [ Luca Bruno ]
  * reportbug/ui/gtk2_ui.py:
    - fix crash when showing menu options; Closes: #526628
    - make the textbox containing error information wider
    - implement show_report() : it allows querybts to work with gtk2 UI; thanks
      to James Vega for the report;  Closes: #525762

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump reportbug version
  * reportbug/submit.py
    - skip to show the ack message if fails to send the email to all the
      recipients; thanks to Cyril Brulebois for the report and to Carl Chenet
      for the patch; Closes: #524640
    - limit tries to max 3 (1 try + 2 retries) to deliver the message; thanks to
      alecs1 for the report and to Carl Chenet for the patch; Closes: #489447
  * reportbug/utils.py, bin/reportbug
    - added 'mua_exists' function to check existence of the selected MUA; thanks